[build-system]
requires = [ "hatchling>=1.24.2", "hatch-vcs>=0.3.0",]
build-backend = "hatchling.build"

[project]
name = "wellness"
version = "0.0.1"
description = "Facts to enjoy equally"
readme = "README.md"
requires-python = ">=3.11"
keywords = [ "wellness",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12",]
dependencies = [ "click==8.1.8", "hatch==1.14.0", "hatchling==1.27.0", "openai==1.64.0", "uv==0.6.2", ]

[[project.authors]]
name = "Zachary Ernst"
email = "zac.ernst@gmail.com"

[[project.maintainers]]
name = "Zachary Ernst"
email = "zac.ernst@gmail.com"

[project.license]
file = "LICENSE.txt"

[project.optional-dependencies]
dev = [ "hatch>=1.12.0,<2.0.0",]

[project.urls]
Homepage = "https://github.com/zacernst/wellness"

[project.scripts]
wellness = "wellness.wellness:wellness"

[tool.ruff]
exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.coverage.report]
omit = [ "cli.py",]
exclude_also = [ "def tree", "def print_tree", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]

[tool.pytest.ini_options]
addopts = ""
testpaths = []


[tool.hatch.build.targets.wheel]
packages = ["src/wellness"]
